fixed bug when user does not have a image to display and align to center the logo on the navbar

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -10,10 +10,11 @@
 }
 
 #img-container {
+  text-align: center;
   img {
     height: 50px;
     width: 50px;
-    margin-left: 20px;
+    // margin-left: 20px;
     margin-top: 44px;
     margin-bottom: auto;
   }
